Enhance code documentation and improve UI/UX stability through robust error handling and lifecycle management
This commit adds comprehensive Javadoc documentation across the codebase, explaining core game logic, UI components, and Firebase integration. It also introduces several stability improvements, such as null-safety checks in fragment listeners and more robust multi-touch handling in the 3D donut renderer.

- **Documentation & Code Quality:**
    - Added detailed Javadoc comments to major classes including `MainActivity`, `BoggleView`, `DonutActivity`, and the `Trie` data structures.
    - Improved code readability by organizing class members and adding inline explanations for complex logic.

- **Game Logic & Multiplayer Enhancements:**
    - Refactored `SingleplayerActivity` to use a lambda for word click listeners, simplifying the interface implementation.
    - Enhanced `LobbyFragment` with safety checks (`isAdded()`) and implemented `onDisconnect` logic to automatically remove players from Firebase rooms upon abrupt disconnection.
    - Improved room cleanup in `MultiplayerActivity` to ensure empty room nodes are deleted from the database.
    - Synchronized horizontal scrolling across multiple player word lists in `PlayersWordsAdapter` using a custom `OnScrollListener`.

- **UI & UX Improvements:**
    - Implemented `SquareTextView` to ensure perfectly square dice on the Boggle board across different screen sizes.
    - Updated `JoinOrCreateRoomFragment`, `SignUpFragment`, and `LoginFragment` with dynamic layout adjustments for better dialog sizing.
    - Added user-friendly toast messages for notification permission denials and multiplayer authentication requirements.
    - Refined the "hint" system in `BoggleView` to ensure hints are only provided during active gameplay and correctly update the UI badge.

- **Firebase & Infrastructure:**
    - Enhanced `InvitationService` to delete invitation records after processing to prevent stale notifications.
    